Sun May 22 17:25:18 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

        * test/ruby/enc/test_case_options.rb: adjust test class name
	  to match file name

Sun May 22 17:24:07 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

        * rename test/ruby/enc/test_casing_options.rb to test_case_options.rb
	  for consistency

Sun May 22 17:06:55 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (enc_arg, str_transcode_enc_args, econv_args):
	  remove volatile, and add GC guards in callers.
	  [ruby-core:75664] [Bug #12411]

Sun May 22 16:27:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/integer/core_ext.c: move testutil/integer.c.

	* test/lib/-test-/integer.rb: extract implementation details from
	  test/unit/assertions.rb.  [Bug #12408]

Sun May 22 14:57:43 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

        * include/ruby/oniguruma.h: Extend OnigEncodingTypeDefine to define a
	  new encoding primitive 'case_map' for case mapping

	* enc/utf-8.c, utf_16be/le.c, utf_32be/le.c:
	  add onigenc_unicode_case_map as case_map primitive

	* enc/ascii.c, big5.c, cp949.c, emacs_mule.c, euc_jp/kr/tw.c, gb18030.c,
	  gbk.c, iso_8859_1/2/3/4/5/6/7/8/9/10/11/13/14/15/16.c, koi8_r/u.c,
	  shift_jis.c, us_ascii.c, windows_1250/1251/1252.c:
	  add onigenc_not_support_case_map as case_map primitive

Sun May 22 14:45:45 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

        * regenc.h/c: Define new function onigenc_not_support_case_map

Sun May 22 12:14:06 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): use original rb_scan_args
	  when fmt is dynamic.

Sun May 22 11:41:12 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* class.c (rb_scan_args): moved to bottom of the file to make the
	  effect of `#undef rb_scan_args` the minimum.

	* include/ruby/ruby.h (rb_scan_args): overwrite only if GCC and
	  optimized. Visual C++ 14 or later can compile it but make it
	  conservative.
